Add log count functionality.
Helps to measure the distribution of log events.

--- a/Psi.App/Psi.App.csproj
+++ b/Psi.App/Psi.App.csproj
@@ -33,12 +33,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Benchmark.cs" />
     <Compile Include="Test.cs" />
+    <Compile Include="LogProvider.cs" />
+    <Compile Include="LogCount.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
