--- a/Psi.App/Psi.App.csproj
+++ b/Psi.App/Psi.App.csproj
@@ -42,6 +42,7 @@
     <Compile Include="LogProvider.cs" />
     <Compile Include="LogCount.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="MultiCpuBenchmark.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
