--- a/Psi/Psi.csproj
+++ b/Psi/Psi.csproj
@@ -44,6 +44,7 @@
     <Compile Include="LogEvents\TeamTrigger.cs" />
     <Compile Include="LogEvents\TeamBase.cs" />
     <Compile Include="LogEvents\Meta.cs" />
+    <Compile Include="LogEvents\Kick.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
